Fix full width and header/column alignment

--- a/src/component/virtualized/table/VirtualizedTable.scss
+++ b/src/component/virtualized/table/VirtualizedTable.scss
@@ -4,6 +4,7 @@
     border-spacing: 0;
     font-family: arial, sans-serif;
     table-layout: fixed;
+    width: 100%;
 
     thead {
         display: grid;
@@ -30,13 +31,13 @@
 
     th {
         display: flex;
-        padding: 2px 4px;
         text-align: left;
+        padding: 8px 16px;
     }
 
     td {
         display: flex;
-        padding: 6px;
+        padding: 4px 16px;
     }
 
     &__container {
